<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="@string/prefs_pro_settings"
        android:title="@string/prefs_pro_settings_title">
        <de.mrapp.android.preference.NumberPickerPreference
            android:defaultValue="@string/prefs_data_saver_daily_limit_size_default"
            android:dialogTitle="@string/prefs_data_saver_daily_limit_size_dialog_title"
            android:key="@string/prefs_datasaver_daily_limit_size"
            android:max="1000"
            android:title="@string/prefs_data_saver_daily_limit_size_title"
            custom:dialogThemeResource="@style/MaterialDialog"
            custom:min="5"
            custom:showValueAsSummary="false"
            custom:stepSize="5"
            custom:unit="MB"
            custom:useInputMethod="false"
            custom:wrapSelectorWheel="false" />


    </PreferenceCategory>
</PreferenceScreen>
